# discord-bot

./: Cargo.toml  README.md  log  setup_db.sh
config/: asset_list.toml  bestiary.csv  building_list.toml  circularity_check.txt  resource_list.toml  slayer_list.csv
db/: coc.db-shm  coc.db-wal
migrations/: 01_initial_migration.sql  02_add_team_members.sql  03_add_item_list.sql  04_seed_sample_data.sql  05_add_team_embeds.sql  05_noteworthy_items.sql  06_seed_sample_embed.sql  06_seed_sample_noteworthy.sql  06_seed_sample_noteworthy.txt  07_add_team_buildings.sql  08_add_monster_restrictions.sql  09_add_armory_combat_mapping.sql  10_add_slayer_master.sql  11_resource_multipliers.sql  12_crafting_multipliers.sql  12_global_embeds.sql  13_add_team_handicaps.sql  14_update_resource_multipliers.sql
src/: main.rs
src/coc/: mod.rs
src/coc/bestiary/: mod.rs
src/coc/buildings/: mod.rs
src/coc/commands/: assign.rs  mod.rs
src/coc/commands/embed/: mod.rs
src/coc/commands/helper/: mod.rs
src/coc/database/: mod.rs
src/coc/patterns/: mod.rs
src/commands/: mod.rs  ping.rs
src/dink/: mod.rs
src/utils/: mod.rs
src/webhook/: mod.rs
util/: notes.md
