[package]
    name = "discord-bot"
    version = "0.1.0"
    edition = "2021"

[dependencies]
chrono = "0.4.40"
    dotenv = "0.15.0"
    poise = "0.6.1"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
    serenity = { version = "0.12.4", default-features = true, features = ["cache", "framework", "standard_framework", "rustls_backend", "collector"] }
    sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite"] }
    tokio = { version = "1.43.0", features = ["macros", "signal", "rt-multi-thread"] }
toml = "0.8.20"
    tracing = "0.1.41"
    tracing-subscriber = "0.3.19"
